@@ -66,6 +66,7 @@ Release 0.19.0 - Unreleased
    HBASE-984   Fix javadoc warnings
    HBASE-985   Fix javadoc warnings
    HBASE-951   Either shut down master or let it finish cleanup
+   HBASE-964   Startup stuck "waiting for root region"
    
   IMPROVEMENTS
    HBASE-901   Add a limit to key length, check key and value length on client side
@@ -104,7 +105,7 @@ Release 0.19.0 - Unreleased
    HBASE-975   Improve MapFile performance for start and end key
    HBASE-961   Delete multiple columns by regular expression
                (Samuel Guo via Stack)
-   HBASE-964   Startup stuck "waiting for root region"
+   HBASE-722   Shutdown and Compactions
         
   NEW FEATURES
    HBASE-875   Use MurmurHash instead of JenkinsHash [in bloomfilters]
